--- a/package.json
+++ b/package.json
@@ -25,5 +25,17 @@
     "eslint-plugin-prettier": "^5.0.1",
     "nodemon": "^3.0.1",
     "prettier": "^3.1.0"
+  },
+  "dependencies": {
+    "body-parser": "^1.20.2",
+    "consola": "^3.2.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-basic-auth": "^1.2.1",
+    "helmet": "^7.1.0",
+    "logger": "^0.0.1",
+    "morgan": "^1.10.0",
+    "routes": "^2.1.0"
   }
 }
