--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "helmet": "^7.1.0",
     "logger": "^0.0.1",
     "morgan": "^1.10.0",
+    "router": "^1.3.8",
     "routes": "^2.1.0"
   }
 }
