--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "logger": "^0.0.1",
     "morgan": "^1.10.0",
     "router": "^1.3.8",
-    "routes": "^2.1.0"
+    "routes": "^2.1.0",
+    "uuid": "^9.0.1"
   }
 }
